# OpenGL

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
shaders/: Basic.shader  point.shader  red_triangle.shader
src/: logger.cpp  logger.hpp  main.cpp  renderer.cpp  renderer.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp
src/opengl/: indexBuffer.cpp  opengl_types.cpp  opengl_types.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBufferLayout.hpp
